Changed: Logout inside moving ships will not make it stop anymore.
Fixed: Ships not moving correctly objects inside it when there's too many objects to move.
[sphere.ini]: Added new setting CombatArcheryMovementDelay (ported from experimental branch)
[sphereCrypt.ini]: Added crypt key for classic client 7.0.80 and enhanced client 4.0.80

18-11-2019, Coruja
Changed: Updated all lore skills (Anatomy, Animal Lore, Arms Lore, Eval Int, Forensics Eval, Item ID, Taste ID)
[sphereCrypt.ini]: Added crypt key for classic client 7.0.81 and enhanced client 4.0.81
[sphere_msgs.scp]: Updated message list with the following changes
	-Added: number_*
	-Removed: msg_pet_*, non_alive, pet_happy_unaffected
	-Updated: anatomy_*, animallore_*, armslore_*, evalint_*, forensics_*, itemid_*, tasteid_*, pronoun_*

26-11-2019, Coruja
Removed: Obsolete 'guest' account priv (plevel 0)
	-All 'guest' privs can be softcoded, so there's no reason to keep it hardcoded
	-Accounts with PLEVEL=0 (guest) will be automatically updated to PLEVEL=1 (player) at server startup
[sphere.ini]: Removed GuestsMax setting and replaced obsolete AccApp with new AutoAccountCreation
[sphereCrypt.ini]: Added crypt key for classic client 7.0.82 and enhanced client 4.0.82
[sphere_msgs.scp]: Removed messages 'msg_acc_gused', 'msg_acc_unk', 'msg_acc_guesthit', 'msg_guest', 'charinfo_guest'

29-11-2019, Coruja
Fixed: Field spell items not showing to clients outside multis when OF_OSIMultiSight optional feature is enabled on sphere.ini
Changed: Some changes on spell triggers (@Effect/@Success [spells] / @SpellEffect/@SpellSuccess [chars]) to allow more customization
	-LOCAL.Duration now accept an 2nd argument to return random values (eg: LOCAL.Duration=60 will return 60, and LOCAL.Duration=60,80 will return a random value between 60,80)

01-12-2019, Coruja
Fixed: Chars with STATF_Stone flag can't cast spells anymore.