@@ -1,10 +1,10 @@
 //****************************************************************************
-// Copyright 2018 SphereServer development team
+// Copyright 2019 SphereServer development team
 // Licensed under the Apache License, Version 2.0 (the "License").
 // You may not use this file except in compliance with the License.
 // You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
 //****************************************************************************
-// FILE LAST UPDATED: Tuesday, Nov 26, 2019
+// FILE LAST UPDATED: Thursday, Dec 5, 2019
 
 // WARNING: Modifing this file, without knowing what you are doing, can make Sphere behave incorrectly.
 
@@ -22,6 +22,7 @@ ENC_TFISH  3 // Twofish
 
 [SPHERECRYPT]
 //Classic Clients
+7008300 03D8E72CD 0AA81DE7F ENC_TFISH // 7.0.83
 7008200 03E5728DD 0AB14227F ENC_TFISH // 7.0.82
 7008100 03E18E2ED 0AB38FE7F ENC_TFISH // 7.0.81
 7008000 03E21A0FD 0AB3B527F ENC_TFISH // 7.0.80
@@ -164,6 +165,7 @@ ENC_TFISH  3 // Twofish
 2000000 02D13A5FD 0A39D527F ENC_BFISH // 2.0.0
 
 //Enhanced Clients
+067900830 01F8E72CD 0BB81DE7F ENC_TFISH // 4.0.83
 067900820 01C5728DD 0BA14227F ENC_TFISH // 4.0.82
 067900810 01C18E2ED 0BA38FE7F ENC_TFISH // 4.0.81
 067900800 01C21A0FD 0BA3B527F ENC_TFISH // 4.0.80
